@@ -1,6 +1,12 @@
 2006-08-22  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
 
 	* app/tools/gimprectangletool.c (gimp_rectangle_tool_motion):
+	respect "fixed-center" constraint even if "fixed-aspect"
+	or "aspect-square" constraints are active.
+
+2006-08-22  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
+
+	* app/tools/gimprectangletool.c (gimp_rectangle_tool_motion):
 	remove some constraining code that shouldn't have been there,
 	and simplify a bit.
 
